--- a/style.css
+++ b/style.css
@@ -4,21 +4,21 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.header img {
   width: 100%;
 }
-.aaa .more_inf {
+.header .link-for-more-information {
   font-family: fantasy, cursive;
 }
 
 @media (max-width: 768px) {
-  .aaa {
+  .header {
     text-align: center;
   }
 }
@@ -90,7 +90,7 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-#topsectionforaddingelementtolist h2 {
+#top-section-for-adding-element-to-list h2 {
   margin: 0 0 20px;
 }
 input#new-task {
@@ -143,11 +143,11 @@ ul li input[type="text"] {
   display: none;
 }
 
-ul li.editmode input[type="text"] {
+ul li.edit-mode input[type="text"] {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editmode label {
+ul li.edit-mode label {
   display: none;
 }
