--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 .header img {
   width: 100%;
 }
-.header .link-for-more-information {
+.header .link-info{
   font-family: fantasy, cursive;
 }
 
@@ -22,7 +22,7 @@ body {
     text-align: center;
   }
 }
-.centered-main-page-element {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -32,7 +32,7 @@ body {
   display: inline-block;
   flex-grow: 1;
 }
-.task-row-wrapper {
+.task-wrapper {
   display: flex;
 }
 ul {
@@ -90,7 +90,7 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-#top-section-for-adding-element-to-list h2 {
+#top-section h2 {
   margin: 0 0 20px;
 }
 input#new-task {
