--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 .aaa img {
   width: 100%;
 }
-.aaa .more_inf {
+.aaa .more-inf {
   font-family: fantasy, cursive;
 }
 
@@ -90,7 +90,7 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-#topsectionforaddingelementtolist h2 {
+#top-section-for-adding-element-to-list h2 {
   margin: 0 0 20px;
 }
 input#new-task {
@@ -143,11 +143,11 @@ ul li input[type="text"] {
   display: none;
 }
 
-ul li.editmode input[type="text"] {
+ul li.edit-mode input[type="text"] {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editmode label {
+ul li.edit-mode label {
   display: none;
 }
